<resources>
    <string name="app_name">M4EvaluacionIntermedia</string>
    <string name="action_settings">Borrar todo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="tv1">Respuesta </string>
    <string name="txt2">Nombre producto</string>
    <string name="txtr3">Precio </string>
    <string name="txtcantidad">Cantidad </string>
    <string name="txttotal">TOTAL ACTUAL </string>
    <string name="button">GUARDAR </string>
    <string name="cb">Pedido terminado </string>

    <string name="cb2">Pedido esta terminado </string>





</resources>